# Korepi

./: README.md  README_zh-cn.md
Crack/: Patch.ex_
crackpipe_public_kp46/: CMakeLists.txt
crackpipe_public_kp46/src/: exe.cpp
crackpipe_public_kp46/src/korepi_injector/: main.cpp
crackpipe_public_kp47/src/: exe.cpp
crackpipe_public_kp47/src/korepi_injector/: main.cpp
crackpipe_public_kp50/: CMakeLists.txt
crackpipe_public_kp50/src/: Logger.cpp
crackpipe_public_kp50/src/korepi_injector/: main.cpp
lol/: dll.cpp  exe.cpp  injector.cpp
lol_46/: dll.cpp  exe.cpp
src/: Crack.BPT  Patch.md
src/Crack/: Crack.sln
src/Crack/Crack/: Crack.vcxproj  Crack.vcxproj.filters  dllmain.cpp
src/Crack/Crack/x64/Release/: Crack.dll.recipe  std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
src/Crack/Crack/x64/Release/Crack.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Crack.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
src/PatchLauncher/: PatchLauncher.sln
src/PatchLauncher/PatchLauncher/: PatchLauncher.cpp  PatchLauncher.vcxproj  PatchLauncher.vcxproj.filters
src/PatchLauncher/PatchLauncher/x64/Debug/: vc143.idb
src/PatchLauncher/PatchLauncher/x64/Debug/PatchLauncher.tlog/: PatchLauncher.lastbuildstate
src/PatchLauncher/PatchLauncher/x64/Release/: PatchLauncher.exe.recipe  PatchLauncher.iobj  PatchLauncher.ipdb  std.compat.ixx.ifc.dt.d.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
src/PatchLauncher/PatchLauncher/x64/Release/PatchLauncher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PatchLauncher.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
